--- a/public/_partials/employeeBar.jade
+++ b/public/_partials/employeeBar.jade
@@ -1,4 +1,4 @@
-div(style="width: 100%; padding: 30px; background-color: gray; display: table;")
+div(style="width: 100%; padding: 30px; background-color: gray; display: table; margin-bottom: 15px;")
   div(style="display: table-cell; color: white; float: left;")
     div.bold VIEWING CONTRACT INFORMATION FOR:
     div(style="font-size: 2em") {{contractType}}
@@ -10,7 +10,7 @@ div(style="width: 100%; padding: 30px; background-color: gray; display: table;")
       role="button" 
       data-toggle="popover" 
       data-html="true" 
-      title="Dismissible popover"
+      title=""
       selected="contractType"
       data-placement="bottom" 
       bz-popover) Change Contract Type
